<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".SearchFlight">

    <RelativeLayout
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/arrow_left"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout14"
        android:layout_width="109dp"
        android:layout_height="39dp"
        android:layout_marginTop="112dp"
        android:onClick="showArrival"
        android:background="@drawable/bg_item"
        android:backgroundTint="@color/material_dynamic_neutral90"
        app:layout_constraintEnd_toStartOf="@+id/oneway"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="21dp"
            android:text="@string/round_trip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/oneway"
        android:layout_width="109dp"
        android:layout_height="39dp"
        android:layout_marginTop="112dp"
        android:onClick="hideArrival"
        android:background="@drawable/bg_item"
        android:backgroundTint="@color/material_dynamic_neutral90"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout13"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="21dp"
            android:text="@string/one_way"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout13"
        android:layout_width="109dp"
        android:layout_height="39dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/bg_item"
        android:onClick="showArrival"
        android:backgroundTint="@color/material_dynamic_neutral90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="21dp"
            android:text="@string/multi_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout15"
        android:layout_width="380dp"
        android:layout_height="182dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/search_item"
        android:backgroundTint="@color/material_dynamic_neutral90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="116dp"
            android:layout_marginBottom="90dp"
            android:contentDescription="@string/from"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/line" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="334dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/from"
            android:textColor="#909090"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="334dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/to"
            android:textColor="#909090"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <EditText
            android:id="@+id/dep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:inputType="text"
            android:text="BEY"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/arr"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="33dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="text"
            android:text="CAI"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/idBtnPickDate"
        android:layout_width="120dp"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="275dp"
        android:background="@drawable/card_item"
        android:backgroundTint="@color/material_dynamic_neutral90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout15">

        <TextView
            android:id="@+id/departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/dep"
            android:textColorLink="#909090"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/dep_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/arrivalF"
        android:layout_width="120dp"
        android:layout_height="76dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_item"
        android:backgroundTint="@color/material_dynamic_neutral90"
        app:layout_constraintBottom_toTopOf="@+id/search_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/idBtnPickDate"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout15">

        <TextView
            android:id="@+id/arrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="38dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/arr"
            android:textColorLink="#909090"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/arr_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout17"
        android:layout_width="120dp"
        android:layout_height="76dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_item"
        android:backgroundTint="@color/material_dynamic_neutral90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/arrivalF"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout15">

        <TextView
            android:id="@+id/nb_passenger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/nb_pass"
            android:textColorLink="#909090"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/search_btn"
        android:layout_width="251dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/grey"
        android:fontFamily="@font/inter_medium"
        android:onClick="moveTOSearch"
        android:elevation="20dp"
        android:text="@string/search"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrivalF" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="411dp"
        android:layout_height="271dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/worldmap" />

</androidx.constraintlayout.widget.ConstraintLayout>